"fix: исправил все недочеты, указанные ревьюером"